--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.scss
@@ -26,6 +26,10 @@
       &.small {
         width: 22px;
       }
+      &.disabled {
+        color: var(--e-grey-30);
+        cursor: not-allowed;
+      }
     }
   }
 }
