--- a/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
@@ -9,7 +9,7 @@
 <div class="page-body">
   <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
 
-  <app-component-section [sectionTitle]="'Type'">
+  <!-- <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Colored'">
         <ng-container ngProjectAs="sectionContent">
@@ -25,7 +25,7 @@
         </ng-container>
       </app-component-subsection>
     </ng-container>
-  </app-component-section>
+  </app-component-section> -->
 
   <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
