add Slider to v2-playground.component.html

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -307,6 +307,76 @@
     ></elvia-radio-filter>
   </div>
 
+  <!--Slider-->
+  <div class="example-wrapper">
+    <h3>Slider</h3>
+    <h4>Simple Slider</h4>
+    <elvia-slider
+      [sliderType]="'simple'"
+      [min]="0"
+      [max]="100"
+      [disabled]="false"
+      [hasInputField]="false"
+    ></elvia-slider>
+    <h5>With input</h5>
+    <elvia-slider
+      [sliderType]="'simple'"
+      [min]="0"
+      [max]="100"
+      [disabled]="false"
+      [hasInputField]="true"
+    ></elvia-slider>
+    <h5>Disabled</h5>
+    <elvia-slider
+      [sliderType]="'simple'"
+      [min]="0"
+      [max]="100"
+      [disabled]="true"
+      [hasInputField]="false"
+    ></elvia-slider>
+    <h5>Disabled with input</h5>
+    <elvia-slider
+      [sliderType]="'simple'"
+      [min]="0"
+      [max]="100"
+      [disabled]="true"
+      [hasInputField]="true"
+    ></elvia-slider>
+
+    <h4>Range Slider</h4>
+    <elvia-slider
+      [sliderType]="'range'"
+      [min]="0"
+      [max]="100"
+      [disabled]="false"
+      [hasInputField]="false"
+    ></elvia-slider>
+    <h5>With input</h5>
+    <elvia-slider
+      [sliderType]="'range'"
+      [min]="0"
+      [max]="100"
+      [disabled]="false"
+      [hasInputField]="true"
+    ></elvia-slider>
+    <h5>Disabled</h5>
+    <elvia-slider
+      [sliderType]="'range'"
+      [min]="0"
+      [max]="100"
+      [disabled]="true"
+      [hasInputField]="false"
+    ></elvia-slider>
+    <h5>Disabled with input</h5>
+    <elvia-slider
+      [sliderType]="'range'"
+      [min]="0"
+      [max]="100"
+      [disabled]="true"
+      [hasInputField]="true"
+    ></elvia-slider>
+  </div>
+
   <!--Spotlight-->
   <div class="example-wrapper">
     <h3>Spotlight</h3>
