add semantic tags

--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
   <div class="logo">
     <a class="header-top_logo" (click)="navigate('')">
       <img src="../../../../assets/logo/elvia_positive_1.svg" alt="Elvia Logo" />
@@ -16,7 +16,7 @@
       </span>
     </button>
   </div>
-</div>
+</header>
 
 <div class="content">
   <div class="menu" *ngIf="mainMenu">
