--- a/packages/web/src/app/shell/footer/footer.component.html
+++ b/packages/web/src/app/shell/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer" [ngClass]="bgClass">
+<footer class="footer" [ngClass]="bgClass">
   <div class="footer-container">
     <div class="e-grid">
       <div class="row no-gutters justify-content-center">
@@ -131,4 +131,4 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
