--- a/packages/web/src/app/shell/main/main.component.html
+++ b/packages/web/src/app/shell/main/main.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
-<div class="main-content" style="overflow: hidden" [ngClass]="bgClass">
+<main class="main-content" style="overflow: hidden" [ngClass]="bgClass">
   <div [ngClass]="{ 'e-grid': !isHomePage }">
     <div [ngClass]="{ row: !isHomePage, 'row-reverse': isLandingPage }">
-      <div class="main-navbar" [ngClass]="{ hide: isHomePage }">
+      <nav class="main-navbar" aria-label="main navigation" [ngClass]="{ hide: isHomePage }">
         <app-navbar></app-navbar>
-      </div>
+      </nav>
       <div [ngClass]="{ 'feedback-link desktop': !isHomePage }" *ngIf="!isLandingPage">
         <div class="link" (click)="scrollToFeedback()">
           <img src="./../../../assets/feedback/smiley.svg" alt="Feedback emoji" />
@@ -31,5 +31,5 @@
       </div>
     </div>
   </div>
-</div>
+</main>
 <app-footer></app-footer>
