--- a/packages/web/src/app/shell/navbar/navbar.component.html
+++ b/packages/web/src/app/shell/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="navbar navbar-bottom-blur" id="side-navbar" (scroll)="updateNavbarBlur()">
+  <nav class="navbar navbar-bottom-blur" id="side-navbar" (scroll)="updateNavbarBlur()">
     <div *ngIf="!isLoaded">
       <span class="e-content-loader" style="height: 50vh; width: 100%"></span>
     </div>
@@ -47,9 +47,9 @@
         ></div>
       </li>
     </ul>
-  </div>
+  </nav>
 
-  <div class="navbar-phone" [ngClass]="{ 'show-block': isLandingPage }">
+  <nav class="navbar-phone" [ngClass]="{ 'show-block': isLandingPage }">
     <div
       class="navbar-phone-box e-w-100 e-mx-40"
       style="border-bottom: 1px solid #e9e9e9"
@@ -67,5 +67,5 @@
         </span>
       </a>
     </div>
-  </div>
+  </nav>
 </div>
