--- a/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
@@ -25,14 +25,6 @@
           Use simple card when an icon together with a short title is enough information to describe the link.
         </ng-container>
         <ng-container ngProjectAs="sectionContent">
-          <app-component-subsubsection [sectionTitle]="'Square vs circle'">
-            <ng-container ngProjectAs="sectionContent">
-              It is mostly the visual that is the difference between them. The circle is less eye-catching
-              with transparent background and a circle upon hover. The square has a border and background with
-              a square hover. Also, the square has more options like border with color, and number instead of
-              icon.
-            </ng-container>
-          </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Visual item'">
             <ng-container ngProjectAs="sectionContent">
               Select between an icon or a number as a visual item. A number is used if you need a counter.
@@ -63,9 +55,9 @@
           Use detail card when you need to give more information about the link.
         </ng-container>
         <ng-container ngProjectAs="sectionContent">
-          <app-component-subsubsection [sectionTitle]="'Label'">
+          <app-component-subsubsection [sectionTitle]="'Tag'">
             <ng-container ngProjectAs="sectionContent">
-              If you need to categorize the cards you can add a label.
+              If you need to categorize the cards you can add a tag.
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Corner icon'">
