--- a/packages/vue-test/src/styles.scss
+++ b/packages/vue-test/src/styles.scss
@@ -14,6 +14,9 @@ body {
 }
 
 .example-wrapper {
-  border-top: 1px solid var(--e-green);
   padding: 32px 32px 72px;
+
+  &:not(:first-child) {
+    border-top: 1px solid var(--e-green);
+  }
 }
