rename sliderType to type in playground

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -312,7 +312,7 @@
     <h3>Slider</h3>
     <h4>Simple Slider</h4>
     <elvia-slider
-      [sliderType]="'simple'"
+      [type]="'simple'"
       [min]="0"
       [max]="100"
       [disabled]="false"
@@ -320,7 +320,7 @@
     ></elvia-slider>
     <h5>With input</h5>
     <elvia-slider
-      [sliderType]="'simple'"
+      [type]="'simple'"
       [min]="0"
       [max]="100"
       [disabled]="false"
@@ -328,7 +328,7 @@
     ></elvia-slider>
     <h5>Disabled</h5>
     <elvia-slider
-      [sliderType]="'simple'"
+      [type]="'simple'"
       [min]="0"
       [max]="100"
       [disabled]="true"
@@ -336,7 +336,7 @@
     ></elvia-slider>
     <h5>Disabled with input</h5>
     <elvia-slider
-      [sliderType]="'simple'"
+      [type]="'simple'"
       [min]="0"
       [max]="100"
       [disabled]="true"
@@ -345,7 +345,7 @@
 
     <h4>Range Slider</h4>
     <elvia-slider
-      [sliderType]="'range'"
+      [type]="'range'"
       [min]="0"
       [max]="100"
       [disabled]="false"
@@ -353,7 +353,7 @@
     ></elvia-slider>
     <h5>With input</h5>
     <elvia-slider
-      [sliderType]="'range'"
+      [type]="'range'"
       [min]="0"
       [max]="100"
       [disabled]="false"
@@ -361,7 +361,7 @@
     ></elvia-slider>
     <h5>Disabled</h5>
     <elvia-slider
-      [sliderType]="'range'"
+      [type]="'range'"
       [min]="0"
       [max]="100"
       [disabled]="true"
@@ -369,7 +369,7 @@
     ></elvia-slider>
     <h5>Disabled with input</h5>
     <elvia-slider
-      [sliderType]="'range'"
+      [type]="'range'"
       [min]="0"
       [max]="100"
       [disabled]="true"
