--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -150,8 +150,9 @@ $form-input-padding-compact-active: 3px 9px;
   &.e-input---readonly > input:focus,
   &.e-input---readonly > input:read-only,
   &.e-input---readonly > input:read-only:focus {
+    background: colors.color('grey-02');
     border: unset;
-    cursor: not-allowed;
+    color: colors.color('text-light');
     padding: $form-input-padding-compact-active;
   }
 
