--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2866,6 +2866,12 @@ input:focus {
   border-color: #bdbdbd;
   cursor: not-allowed;
 }
+.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus, .e-input.e-input---readonly > input:read-only, .e-input.e-input---readonly > input:read-only:focus {
+  background: #fafafa;
+  border: unset;
+  color: #515151;
+  padding: 12px 16px;
+}
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
   display: none;
@@ -2914,6 +2920,16 @@ input:focus {
 .e-input.e-input--compact > input:focus,
 .e-input.e-input--compact > textarea:focus {
   border: 2px solid #29d305;
+  padding: 3px 9px;
+}
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
+.e-input.e-input--compact.e-input---readonly > input,
+.e-input.e-input--compact.e-input---readonly > input:focus,
+.e-input.e-input--compact.e-input---readonly > input:read-only,
+.e-input.e-input--compact.e-input---readonly > input:read-only:focus {
+  background: #fafafa;
+  border: unset;
+  color: #515151;
   padding: 3px 9px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon,
