Lego 1925: Fix datepicker year icon rotation animation, cleanup datepicker depen… (#1011)
* fix datepicker year icon rotation animation, cleanup datepicker dependencies

* animate svg instead of i

--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -297,6 +297,14 @@ $datepicker-max-width: 448px;
 
         margin-right: 8px;
       }
+      // Rotate the year-dropdown icon when opened
+      svg {
+        transform: rotate(0deg);
+        transition: transform 0.2s ease-out;
+      }
+      &[data-isyearview='true'] svg {
+        transform: rotate(180deg);
+      }
 
       &:hover {
         border-color: $green;
