--- a/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
@@ -103,10 +103,10 @@
           <span class="code-text">readonly</span>
           if there are other interactive input elements in the form, filter, or similar.
           <p>
-            Consider that if the input is a stand-alone element, use a regular text box instead. If the value
-            is not selected or active, use the
+            Consider that if the input is a stand-alone element, use regular typography instead. If the value
+            is immutable and is not selected/should not be read by the computer, use the
             <span class="code-text">disabled</span>
-            attribute.
+            attribute instead.
           </p>
           <app-component-example-v1 [codeHTML]="readonlyExample"></app-component-example-v1>
         </ng-container>
