fix spotlight doc formating

--- a/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
@@ -40,7 +40,7 @@
           formulas:
           <div class="code-text e-mt-40">horizontal = rect.left + rect.width / 2</div>
           <div class="code-text e-mt-16">vertical = rect.top + rect.height / 2</div>
-          <div class="code-text e-mt-40">
+          <div class="e-mt-40">
             Remember to also listen to the scroll-position and update position of the element if it is
             possible to scroll on your page.
           </div>
